# liquidium-pipeline

./: .dockerignore  .env.hyperliquid.example  .gitignore  Cargo.toml  Dockerfile  agent.md  config.env  docker-compose.yml  install.sh  readme.md
.github/workflows/: ci.yml  release.yml
commons/: Cargo.toml
commons/src/: env.rs  error.rs  lib.rs  secret_store.rs  telemetry.rs
connectors/: Cargo.toml
connectors/src/: error.rs  error_format.rs  lib.rs  pipeline_agent.rs  token_registry_loader.rs
connectors/src/account/: evm_account.rs  icp_account.rs  mod.rs  router.rs  solana_account.rs
connectors/src/backend/: amount_utils.rs  cex_backend.rs  evm_backend.rs  icp_backend.rs  icp_backend_helpers.rs  mod.rs  solana_backend.rs
connectors/src/backend/bridge_backend/: catalog.rs  ckerc20_bridge.rs  ckerc20_bridge_tests.rs  ckerc20_bridge_utils.rs  cketh_erc20.rs  ckusdc.rs  mod.rs  solana_bridge.rs  types.rs  utils.rs
connectors/src/crypto/: derivation.rs
connectors/src/transfer/: evm_transfer.rs  icp_transfer.rs  mod.rs  router.rs  solana_transfer.rs
core/: Cargo.toml
core/src/: balance_service.rs  error.rs  lib.rs  ray_math.rs
core/src/account/: actions.rs  model.rs
core/src/tokens/: asset_id.rs  chain.rs  chain_token.rs  chain_token_amount.rs  mod.rs  token_registry.rs
core/src/tokens/icrc/: icrc_token.rs  icrc_token_amount.rs  mod.rs
core/src/transfer/: actions.rs  mod.rs  transfer_service.rs
core/src/types/: mod.rs  protocol_types.rs
dev/: grafana-datasources.yaml  install-daemon.sh  liquidator.service  tempo.yaml
docs/: bridge-architecture.md
evm_bridge_client/: Cargo.toml
evm_bridge_client/src/: client.rs  config.rs  erc20.rs  errors.rs  icp_bridge.rs  lib.rs  types.rs
pipeline/: Cargo.toml
pipeline/proptest-regressions/finalizers/mexc/: mexc_finalizer_tests.txt
pipeline/src/: approval_state.rs  backend_factory.rs  config.rs  context.rs  control_plane.rs  error.rs  lib.rs  main.rs  output.rs  stage.rs  utils.rs  wal.rs
pipeline/src/bridge/: cex_bridge.rs  mod.rs
pipeline/src/commands/: account.rs  bridge_sol.rs  cex.rs  funds.rs  liquidation_loop.rs  liquidation_loop_bridge_sweepers.rs  liquidation_loop_helpers.rs  mexc_smoke_test.rs  mod.rs  tui.rs  withdraw.rs
pipeline/src/executors/: executor.rs  mod.rs
pipeline/src/executors/basic/: basic_executor.rs  mod.rs
pipeline/src/finalizers/: bridge_planner.rs  cex_finalizer.rs  dex_finalizer.rs  finalizer.rs  liquidation_outcome.rs  mod.rs  profit_calculator.rs  wal.rs
pipeline/src/finalizers/hybrid/: hybrid_finalizer.rs  hybrid_finalizer_tests.rs  mod.rs  utils.rs
pipeline/src/finalizers/kong_swap/: kong_swap_finalizer.rs  mod.rs
pipeline/src/finalizers/mexc/: bridge_planner_impl.rs  helper_methods.rs  mexc_finalizer.rs  mexc_finalizer_tests.rs  mexc_utils.rs  mod.rs
pipeline/src/liquidation/: collateral_service.rs  liquidation_math.rs
pipeline/src/notifications/: mod.rs  telegram.rs
pipeline/src/persistance/: mod.rs
pipeline/src/persistance/sqlite/: mod.rs  models.rs  schema.rs
pipeline/src/price_oracle/: price_oracle.rs
pipeline/src/stages/: bridge_submit_lock.rs  bridge_sweeper.rs  executor.rs  export.rs  finalize.rs  mod.rs  opportunity.rs  settlement_watcher.rs  simple_strategy.rs
pipeline/src/swappers/: mod.rs  model.rs  router.rs  swap_interface.rs
pipeline/src/swappers/kong/: kong_adapter.rs  kong_swapper.rs  kong_types.rs  kong_venue.rs  mod.rs
pipeline/src/swappers/mexc/: mexc_adapter.rs  mexc_ccxt_adapter.rs  mexc_swapper.rs  mod.rs
pipeline/src/tui/: app.rs  events.rs  format.rs  input.rs  log_sanitize.rs  log_source.rs  logging.rs  mod.rs  snapshots.rs  withdraw.rs
pipeline/src/tui/views/: balances.rs  configuration.rs  dashboard.rs  executions.rs  logs.rs  mod.rs  profits.rs
pipeline/src/watchdog/: balance_monitor.rs  mod.rs  slack.rs
proptest-regressions/liquidation/: collateral_service.txt  liquidation_math.txt
src/: config.rs  lib.rs  main.rs  pipeline_agent.rs  ray_math.rs  stage.rs  types.rs  utils.rs
src/account/: actions.rs  mod.rs  model.rs  router.rs
src/account/evm/: adapter.rs  model.rs
src/account/icp/: adapter.rs  mod.rs  model.rs
src/bridge/: evm_bridge.rs  evm_client_wrapper.rs  evm_core_bridge.rs  evm_to_icp_bridge.rs  hyperliquid_core.rs  minter_client.rs  mod.rs  types.rs
src/calculations/: collateral_service.rs  mod.rs
src/commands/: account.rs  funds.rs  liquidation_loop.rs  mod.rs  withdraw.rs
src/connectors/: ccxt_client.rs  mod.rs
src/executors/: executor.rs  mod.rs
src/executors/basic/: basic_executor.rs  mod.rs
src/executors/kong_swap/: kong_swap.rs  mod.rs  types.rs
src/finalizers/: finalizer_pipeline.rs  mod.rs
src/finalizers/hyperliquid/: hyperliquid_finalizer_v2.rs  mod.rs
src/finalizers/kong_swap/: kong_swap_finalizer.rs
src/finalizers/mexc/: mexc_finalizer.rs  mod.rs
src/icrc_token/: icrc_token.rs  icrc_token_amount.rs  mod.rs
src/liquidation/: collateral_service.rs  liquidation_math.rs  liquidation_utils.rs  mod.rs
src/persistance/: mod.rs
src/persistance/sqlite/: schema.rs
src/price_oracle/: price_oracle.rs
src/stages/: bridge.rs  dex_swap.rs  executor.rs  export.rs  finalize.rs  liquidation.rs  mod.rs  opportunity.rs  simple_strategy.rs  swap.rs
src/swappers/: hyperliquid_swapper.rs  hyperliquid_tokens.rs  hyperliquid_types.rs  kong_swap_swapper.rs  kong_types.rs  mod.rs  model.rs  swap_interface.rs
src/swappers/kong/: kong_adapter.rs  kong_swapper.rs  kong_venue.rs
src/swappers/mexc/: mexc_ccxt_adapter.rs  mexc_swapper.rs
src/types/: protocol_types.rs
src/watchdog/: mod.rs
