[package]
name = "liquidium-pipeline"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
ic-agent = "0.39.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
dotenv = "0.15"
futures = "0.3"
candid = "0.10.14"
num-traits = "0.2.19"
anyhow = "1.0.98"
icrc-ledger-types = "0.1.6"
log = "0.4"
env_logger = "0.11"
ctor = "0.4.2" 
clap = { version = "4.5.40", features = ["derive"] }
num-format = "0.4.4"


lending = { path = "../liquidium-icp-pools/liquidium-pools/canisters/lending" }
lending-utils = { path = "../liquidium-icp-pools/liquidium-pools/shared", package = "shared" }

icrc-ledger-agent = { git = "https://github.com/dfinity/ic", tag = "release-2025-04-11_13-20-base" }
once_cell = "1.21.3"

[dev-dependencies]
mockall = "0.13.1"
ic_principal = { version = "0.1.1", features = ["arbitrary"] }
arbitrary = "1.4.1"
rand = "0.9.1"