[package]
name = "liquidium-pipeline"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[[bin]]
name = "liquidator"
path = "src/main.rs"

[lints.clippy]
module_inception = "allow"
upper_case_acronyms = "allow"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
ic-agent = "0.40"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
dotenv = "0.15"
futures = "0.3"
candid = "0.10.14"
num-traits = "0.2.19"
anyhow = "1.0.98"
log = "0.4"
env_logger = "0.11"
ctor = "0.4.2"
clap = { version = "4.5.40", features = ["derive"] }
num-format = "0.4.4"
icrc-ledger-types = "0.1.10"
openssl = "0.10"

icrc-ledger-agent = "0.1.0"
once_cell = "1.21.3"
csv = "1.3.1"
mockall = "0.13.1"
prettytable = "0.10.0"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
itertools = "0.14.0"
chrono = "0.4.42"
diesel = { version = "2", features = [
    "sqlite",
    "chrono",
    "serde_json",
    "r2d2",
] }
r2d2 = "0.8.10"


[dev-dependencies]
ic_principal = { version = "0.1.1", features = ["arbitrary"] }
arbitrary = "1.4.2"
rand = "0.9.2"
proptest = "1.4"
tempfile = "3"
