[workspace]
members = ["core", "connectors", "pipeline", "commons"]
resolver = "2"

[workspace.dependencies]
mockall = "0.13.1"
tokio = { version = "1.38", features = ["full"] }
ic-agent = "0.45.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
num-traits = "0.2.19"
anyhow = "1.0.98"
log = "0.4"
env_logger = "0.11"
candid = "0.10.20"
num-format = "0.4.4"
openssl = "0.10"
alloy = "1.1.1"
icrc-ledger-agent = "0.1.0"
icrc-ledger-types = "0.1.10"
futures = "0.3"
bip39 = { version = "2.2.0", features = ["rand"] }
thiserror = "2.0.17"
hex = "0.4.3"

[workspace.dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt"] }
