[package]
name = "liquidium-pipeline-commons"
version = "0.1.0"
edition = "2024"

[lints.clippy]
collapsible_if = "allow"

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
dotenv = "0.15"

# Telemetry
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-log = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
