[package]
name = "liquidium-pipeline-connectors"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[lints.clippy]
double_parens = "allow"
type_complexity = "allow"
collapsible_if = "allow"

[dependencies]
serde = { workspace = true }
alloy = { workspace = true }
candid = { workspace = true }
async-trait = { workspace = true }
ic-agent = { workspace = true }
icrc-ledger-agent = { workspace = true }
icrc-ledger-types = { workspace = true }
log = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
num-traits = { workspace = true }
tracing = { workspace = true }

bip39 = "2.2.0"
bip32 = "0.5.3"
k256 = "0.13.0"
num-bigint = "0.4.6"
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
bitcoin = "0.32"
solana-client = "2.1.0"
solana-sdk = "2.1.0"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
solana-system-interface = "1.0.0"
liquidium-pipeline-core = { path = "../core" }
