[package]
name = "liquidium-pipeline-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
alloy = { workspace = true }
candid = { workspace = true }
async-trait = { workspace = true }
ic-agent = { workspace = true }
icrc-ledger-agent = { workspace = true }
icrc-ledger-types = { workspace = true }
mockall = { workspace = true }
num-format = { workspace = true }
num-traits = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
