[package]
name = "liquidium-pipeline"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[[bin]]
name = "liquidator"
path = "src/main.rs"

[lints.clippy]
module_inception = "allow"
upper_case_acronyms = "allow"

[dependencies]
liquidium-pipeline-core = { path = "../core" }
liquidium-pipeline-connectors = { path = "../connectors" }

mockall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
ic-agent = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
candid = { workspace = true }
num-format = { workspace = true }
openssl = { workspace = true }
icrc-ledger-types = { workspace = true }
icrc-ledger-agent = { workspace = true }
tokio = { workspace = true }
alloy = { workspace = true }
futures = { workspace = true }
bip39 = { workspace = true }

ccxt = { git = "https://github.com/kizzx2/ccxt-rs-lib" }
dotenv = "0.15"
ctor = "0.4.2"
clap = { version = "4.5.40", features = ["derive"] }
once_cell = "1.21.3"
csv = "1.3.1"
prettytable = "0.10.0"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
itertools = "0.14.0"
chrono = "0.4.42"
diesel = { version = "2", features = [
    "sqlite",
    "chrono",
    "serde_json",
    "r2d2",
] }
r2d2 = "0.8.10"
dialoguer = "0.12.0"
sha2 = "0.10"
ed25519-dalek = "2"

k256 = "0.13.0"


[dev-dependencies]
ic_principal = { version = "0.1.1", features = ["arbitrary"] }
arbitrary = "1.4.2"
rand = "0.9.2"
proptest = "1.4"
tempfile = "3"
