[package]
name = "liquidium-pipeline"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[[bin]]
name = "liquidator"
path = "src/main.rs"

[lints.clippy]
module_inception = "allow"
upper_case_acronyms = "allow"
too_many_arguments = "allow"
double_parens = "allow"
collapsible_if = "allow"
type_complexity = "allow"

[features]
default = []
plain-logs = []

[dependencies]
liquidium-pipeline-core = { path = "../core" }
liquidium-pipeline-connectors = { path = "../connectors" }
liquidium-pipeline-commons = { path = "../commons" }

mockall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
ic-agent = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
candid = { workspace = true }
num-format = { workspace = true }
openssl = { workspace = true }
icrc-ledger-types = { workspace = true }
icrc-ledger-agent = { workspace = true }
tokio = { workspace = true }
alloy = { workspace = true }
futures = { workspace = true }
bip39 = { workspace = true }
thiserror = { workspace = true }

mexc-rs = { git = "https://github.com/liquidium-Inc/mexc-rs.git", rev = "efcdfff2ad62be2cf53f1defc0ca7f2e24970730" }
dotenv = "0.15"
ctor = "0.4.2"
clap = { version = "4.5.40", features = ["derive"] }
once_cell = "1.21.3"
csv = "1.3.1"
prettytable = "0.10.0"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
itertools = "0.14.0"
chrono = "0.4.42"
diesel = { version = "2", features = [
    "sqlite",
    "chrono",
    "serde_json",
    "r2d2",
] }
r2d2 = "0.8.10"
dialoguer = "0.12.0"
sha2 = "0.10"
ed25519-dalek = "2"

rust_decimal = "1.39.0"
k256 = "0.13.0"
ic-ledger-types = "0.15.0"
hex = "0.4.2"
reqwest = { version = "0.12", features = ["json"] }

ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.2"

[dev-dependencies]
ic_principal = { version = "0.1.1", features = ["arbitrary"] }
arbitrary = "1.4.2"
rand = "0.9.2"
proptest = "1.4"
tempfile = "3"
